Modular architecture refactor with H100 optimizations for NeurIPS/ICML
  BREAKING CHANGE: Monolithic files replaced with modular package structure

  ## Architecture Refactor (De-monolith Strategy)

  Deleted monolithic files (3,727 lines):
  - src/analytics.py → src/analytics/ (7 files)
  - src/distillation.py → src/distillation/ (8 files)
  - src/training.py → src/training/ (5 files)

  New modular structure:
  ├── src/training/
  │   ├── components.py      # EarlyStopping, LabelSmoothingCrossEntropy
  │   ├── optimizers.py      # build_optimizer, build_scheduler (fused kernels)
  │   ├── checkpointing.py   # RNG state persistence
  │   ├── engine.py          # Trainer, DDPTrainer
  │   └── gpu_augment.py     # GPUMixUp, GPUCutMix, CUDAGraphWrapper
  ├── src/distillation/
  │   ├── teachers.py        # load_dino_teacher
  │   ├── engine.py          # DistillationTrainer, SelfSupervisedDistillationTrainer
  │   └── losses/            # Standard, Token, Structural, Combined losses
  └── src/analytics/
      ├── engine.py          # AnalyticsRunner, LocalityCurseForensics
      ├── metrics/           # HessianAnalyzer, AttentionDistanceAnalyzer, CKAAnalyzer
      └── visualization/     # AnalyticsVisualizer

  ## H100 GPU Optimizations (2x H100 target)

  Config additions:
  - gpu_augmentation: GPU-side MixUp/CutMix (eliminates CPU bottleneck)
  - drop_last: CUDA Graphs compatibility
  - use_cuda_graphs: Kernel launch optimization flag

  Training engine:
  - torch.set_float32_matmul_precision('high') for ~3x MatMul speedup
  - zero_grad(set_to_none=True) for faster gradient reset
  - BF16 autocast without GradScaler (H100 native)

  Config updates (deit_cifar_config.yaml):
  - batch_size: 1024 → 4096 (saturate Tensor Cores)
  - learning_rate: 0.002 → 0.004 (sqrt scaling)
  - num_workers: 8 → 16 (52 vCPUs available)

  Expected speedup: 3-5x vs standard PyTorch eager mode

  ## Other Changes
  - Added analyze-locality CLI command for Locality Curse forensics
  - Adde

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# =============================================================================
+# Python
+# =============================================================================
 __pycache__/
 *.py[cod]
 *$py.class
@@ -18,25 +21,125 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
+
+# =============================================================================
+# Virtual Environments (exclude all variations)
+# =============================================================================
 venv/
+.venv/
 env/
+.env/
 ENV/
-.venv
+env.bak/
+venv.bak/
+.python-version
+Pipfile.lock
+
+# =============================================================================
+# IDE and Editor
+# =============================================================================
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 .DS_Store
+*.sublime-project
+*.sublime-workspace
+.spyderproject
+.spyproject
+
+# =============================================================================
+# Data Files and Directories
+# =============================================================================
 data/
-logs/
+datasets/
+*.csv
+*.tsv
+*.parquet
+*.feather
+*.h5
+*.hdf5
+*.pkl
+*.pickle
+
+# MNIST/CIFAR downloaded data
+MNIST/
+CIFAR/
+CIFAR10/
+cifar-10-batches-py/
+cifar-10-python.tar.gz
+
+# =============================================================================
+# Model Checkpoints and Outputs
+# =============================================================================
 outputs/
 checkpoints/
 results/
-downloads/
-verification_results/
+logs/
+runs/
 *.pth
 *.pt
+*.onnx
+*.safetensors
+*.bin
+
+# TensorBoard
+tensorboard/
+events.out.tfevents.*
+
+# Weights & Biases
+wandb/
+
+# =============================================================================
+# Testing and Coverage
+# =============================================================================
 .pytest_cache/
 .coverage
+.coverage.*
 htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+
+# =============================================================================
+# Documentation builds
+# =============================================================================
+docs/_build/
+site/
+
+# =============================================================================
+# Jupyter Notebooks
+# =============================================================================
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# =============================================================================
+# Miscellaneous
+# =============================================================================
+*.log
+*.tmp
+*.temp
+*.bak
+*.cache
+.cache/
+verification_results/
+
+# Large files
+*.zip
+*.tar
+*.tar.gz
+*.tgz
+*.rar
+*.7z
+
+# Images generated during training/evaluation
+*.png
+*.jpg
+*.jpeg
+!configs/*.png
+!docs/*.png
