--- a/configs/deit_cifar_config.yaml
+++ b/configs/deit_cifar_config.yaml
@@ -9,9 +9,9 @@ data:
     randaugment_m: 9
     mixup: true
     mixup_alpha: 0.8
-    cutmix: false  # Use either mixup or cutmix, not both (dataset wrapper limitation)
+    cutmix: true  # GPU-side CutMix (no dataset wrapper limitation)
     cutmix_alpha: 1.0
-  batch_size: 1024  # H100 optimized (80GB VRAM)
+  batch_size: 4096  # 2x H100 optimized (saturate Tensor Cores)
   data_path: ./data
   dataset: cifar
   normalization:
@@ -23,10 +23,13 @@ data:
     - 0.2470
     - 0.2435
     - 0.2616
-  num_workers: 8
+  num_workers: 16  # High CPU core count available (52 vCPUs)
   persistent_workers: true
   pin_memory: true
-  prefetch_factor: 2
+  prefetch_factor: 4
+  # H100 optimizations
+  gpu_augmentation: true  # Apply MixUp/CutMix on GPU (avoid CPU bottleneck)
+  drop_last: true  # Required for CUDA Graphs (fixed batch size)
 
 device: cuda
 experiment_name: deit_cifar_improved
@@ -83,7 +86,7 @@ distillation:
 
 training:
   num_epochs: 100
-  learning_rate: 0.002  # Same LR, larger batches converge faster
+  learning_rate: 0.004  # Scaled for batch_size=4096 (sqrt scaling: 0.002 * sqrt(4096/1024))
   weight_decay: 0.05
   optimizer: adamw
   scheduler: cosine
@@ -103,8 +106,9 @@ training:
   swa_start_epoch: 0.75
   swa_lr: 0.0001
   # H100 optimizations
-  use_bf16: true
-  use_compile: true
-  compile_mode: max-autotune
-  use_fused_optimizer: true
-  use_tf32: true
+  use_bf16: true  # Native BF16 (no GradScaler needed)
+  use_compile: true  # torch.compile for graph optimization
+  compile_mode: max-autotune  # Optimal Triton kernels for H100
+  use_fused_optimizer: true  # Fused AdamW kernels
+  use_tf32: true  # TF32 matmul acceleration
+  use_cuda_graphs: false  # Enable for small batches (experimental)
