--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,148 +3,68 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "dataset-adaptive-cnn"
+name = "vit-inductive-bias-distillation"
 version = "1.0.0"
 description = "Research framework for studying inductive bias mismatch in CNN-to-ViT knowledge distillation"
 readme = "README.md"
 license = {text = "MIT"}
-requires-python = ">=3.8"
-authors = [
-    {name = "Author"}
-]
-keywords = [
-    "deep-learning",
-    "knowledge-distillation",
-    "vision-transformer",
-    "cnn",
-    "pytorch"
-]
+requires-python = ">=3.10"
+authors = [{name = "Author"}]
+keywords = ["deep-learning", "knowledge-distillation", "vision-transformer", "pytorch"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 
 dependencies = [
-    # Core deep learning
-    "torch>=2.0.0",
-    "torchvision>=0.15.0",
-
-    # Numerical computing
-    "numpy>=1.24.0",
-
-    # Data processing and augmentation
+    "torch>=2.2.0",
+    "torchvision>=0.17.0",
+    "numpy>=1.26.0",
     "Pillow>=10.0.0",
-    "opencv-python>=4.8.0",
-
-    # Visualization
-    "matplotlib>=3.7.0",
-    "seaborn>=0.12.0",
-
-    # Machine learning utilities
-    "scikit-learn>=1.3.0",
-
-    # Configuration and utilities
+    "scikit-learn>=1.4.0",
+    "scipy>=1.12.0",
     "PyYAML>=6.0",
-    "tqdm>=4.65.0",
+    "tqdm>=4.66.0",
+    "timm>=0.9.12",
+    "einops>=0.7.0",
 ]
 
 [project.optional-dependencies]
-# Optional: Advanced model architectures (ConvNeXt V2)
-models = [
-    "timm>=0.9.0",
-]
-
-# Optional: Hessian analysis for loss landscape curvature
-analytics = [
-    "pyhessian>=0.1.0",
-]
-
-# Development tools
 dev = [
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "black>=23.0.0",
-    "flake8>=6.0.0",
-    "mypy>=1.4.0",
-    "isort>=5.12.0",
+    "pytest>=8.0.0",
+    "black>=24.0.0",
+    "flake8>=7.0.0",
+    "mypy>=1.8.0",
+    "isort>=5.13.0",
 ]
-
-# All optional dependencies
-all = [
-    "timm>=0.9.0",
-    "pyhessian>=0.1.0",
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "black>=23.0.0",
-    "flake8>=6.0.0",
-    "mypy>=1.4.0",
-    "isort>=5.12.0",
+h100 = [
+    "flash-attn>=2.5.0",
 ]
 
 [project.scripts]
-adaptive-cnn = "main:main"
-
-[project.urls]
-Homepage = "https://github.com/author/dataset-adaptive-cnn"
-Documentation = "https://github.com/author/dataset-adaptive-cnn#readme"
-Repository = "https://github.com/author/dataset-adaptive-cnn"
+vit-distill = "main:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["src*", "scripts*"]
+include = ["src*"]
 
 [tool.black]
 line-length = 100
-target-version = ["py38", "py39", "py310", "py311"]
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-  | outputs
-  | data
-)/
-'''
+target-version = ["py310", "py311"]
 
 [tool.isort]
 profile = "black"
 line_length = 100
-skip = [".venv", "venv", "outputs", "data"]
 
 [tool.mypy]
-python_version = "3.8"
-warn_return_any = true
-warn_unused_configs = true
+python_version = "3.10"
 ignore_missing_imports = true
-exclude = [
-    "venv",
-    ".venv",
-    "outputs",
-    "data",
-]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-python_files = ["test_*.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"]
 addopts = "-v --tb=short"
-filterwarnings = [
-    "ignore::DeprecationWarning",
-    "ignore::UserWarning",
-]
+pythonpath = ["."]
