--- a/.gitignore
+++ b/.gitignore
@@ -50,11 +50,8 @@ datasets/
 *.pickle
 
 
-MNIST/
-CIFAR/
-CIFAR10/
-cifar-10-batches-py/
-cifar-10-python.tar.gz
+imagenet/
+ILSVRC/
 
 outputs/
 checkpoints/
