--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,30 +1,13 @@
-# Default config for 1x H100 80GB SXM5
-
 seed: 42
 
 training:
-  optimizer: adamw
-  scheduler: cosine
-  warmup_epochs: 10
-  gradient_clip_val: 1.0
-  gradient_accumulation_steps: 1
-  early_stopping: true
+  warmup_fraction: 0.05
   early_stopping_patience: 20
-  early_stopping_min_delta: 0.001
   label_smoothing: 0.1
-  use_swa: true
   swa_start_epoch: 0.8
   swa_lr: 0.0001
 
 data:
   num_workers: 16
-  pin_memory: true
-  persistent_workers: true
-  prefetch_factor: 4
-  data_path: ./data
-
-model:
-  dropout: 0.1
-  drop_path_rate: 0.1
 
 output_dir: ./outputs
