migrate BASD to relational distillation with adaptive spectral layer selection

--- a/configs/experiment/ablation_no_rsd.yaml
+++ b/configs/experiment/ablation_no_rsd.yaml
@@ -1,3 +1,8 @@
-experiment_name: ablation_no_rsd
+run:
+  name: ablation_no_rsd
+
+data:
+  dataset: imagenet1k
+
 basd:
   disable_components: [rsd]
