--- a/configs/experiment/ablation_no_attn.yaml
+++ b/configs/experiment/ablation_no_attn.yaml
@@ -1,3 +1,8 @@
-experiment_name: ablation_no_attn
+run:
+  name: ablation_no_attn
+
+data:
+  dataset: imagenet1k
+
 basd:
   disable_components: [attn]
