--- a/configs/experiment/ablation_no_rel.yaml
+++ b/configs/experiment/ablation_no_rel.yaml
@@ -1,3 +1,8 @@
-experiment_name: ablation_no_rel
+run:
+  name: ablation_no_rel
+
+data:
+  dataset: imagenet1k
+
 basd:
   disable_components: [rel]
