--- a/configs/experiment/basd_imagenet.yaml
+++ b/configs/experiment/basd_imagenet.yaml
@@ -1,1 +1,12 @@
-experiment_name: basd_imagenet
+run:
+  name: basd_imagenet
+
+data:
+  dataset: imagenet1k
+  eval_datasets:
+    - imagenet_a
+    - imagenet_r
+    - imagenet_sketch
+
+model:
+  student_preset: deit_tiny
