--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ dependencies = [
     "torchvision==0.17.0",
     "numpy==1.26.0",
     "PyYAML==6.0.1",
-    "tqdm==4.66.0",
     "scikit-learn==1.4.0",
-    "datasets>=3.0.0",
+    "datasets==3.2.0",
+    "timm==1.0.3",
 ]
 
 [project.scripts]
