--- a/configs/experiment/ablation/rsd_only.yaml
+++ b/configs/experiment/ablation/rsd_only.yaml
@@ -1,5 +1,5 @@
 run:
-  name: basd_imagenet
+  name: ablation_rsd_only
 
 data:
   dataset: ILSVRC/imagenet-1k
@@ -10,3 +10,6 @@ data:
 
 model:
   student_preset: deit_tiny
+
+basd:
+  disabled_components: [rel, attn, spectral]
