--- a/configs/experiment/ablation/uniform_weighting.yaml
+++ b/configs/experiment/ablation/uniform_weighting.yaml
@@ -1,5 +1,5 @@
 run:
-  name: basd_imagenet
+  name: ablation_uniform_weighting
 
 data:
   dataset: ILSVRC/imagenet-1k
@@ -10,3 +10,6 @@ data:
 
 model:
   student_preset: deit_tiny
+
+basd:
+  use_scale_invariant_weighting: false
