--- a/configs/experiment/basd_imagenet_cross_arch.yaml
+++ b/configs/experiment/basd_imagenet_cross_arch.yaml
@@ -2,10 +2,15 @@ run:
   name: basd_imagenet_cross_arch
 
 data:
-  dataset: imagenet1k
+  dataset: ILSVRC/imagenet-1k
+  eval_datasets:
+    - barkermrl/imagenet-a
+    - axiong/imagenet-r
+    - songweig/imagenet_sketch
 
 model:
   student_preset: deit_tiny
 
 basd:
-  teacher_model_name: convnext_tiny
+  teacher_model_name: convnextv2_tiny
+  teacher_loader: timm
