--- a/configs/experiment/basd_imagenet_deit_small.yaml
+++ b/configs/experiment/basd_imagenet_deit_small.yaml
@@ -2,7 +2,11 @@ run:
   name: basd_imagenet_deit_small
 
 data:
-  dataset: imagenet1k
+  dataset: ILSVRC/imagenet-1k
+  eval_datasets:
+    - barkermrl/imagenet-a
+    - axiong/imagenet-r
+    - songweig/imagenet_sketch
 
 model:
   student_preset: deit_small
