--- a/configs/experiment/baseline_imagenet.yaml
+++ b/configs/experiment/baseline_imagenet.yaml
@@ -1,5 +1,5 @@
 run:
-  name: basd_imagenet
+  name: baseline_imagenet
 
 data:
   dataset: ILSVRC/imagenet-1k
@@ -10,3 +10,6 @@ data:
 
 model:
   student_preset: deit_tiny
+
+training:
+  mode: baseline
