--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.10"
 dependencies = [
     "torch==2.2.0",
     "torchvision==0.17.0",
+    "torchmetrics==1.2.0",
     "numpy==1.26.0",
     "PyYAML==6.0.1",
     "datasets==3.2.0",
