refactor data pipeline to HF set_transform pattern, fix trainer bugs, and clean deprecated code
  - Replace HFDataset/DualTransform wrappers with HF-native set_transform() returning
    dict-keyed batches; update all batch unpacking sites in trainer and metrics
  - Move hardcoded augmentation params (random_erasing_prob, eval_resize_padding,
    channel_stats) to config with precomputed stats for ImageNet and CIFAR-100
  - Fix SWA checkpoint overwriting best_model.pth (now swa_model.pth)
  - Fix GradientGatedSchedule._grad_norms lost on checkpoint resume
  - Remove dead global_step parameter chain through BASDLoss.forward/get_ramp
  - Rename misleading student_dim to proj_dim in CrossAttentionProjector
  - Add epoch=start_epoch guard before training loop
  - Remove GPU device-type guards (GPU-only runtime), update dependency pins,
    move delayed torch import to module level, drop redundant weights_only=True

--- a/configs/experiment/basd_cifar100.yaml
+++ b/configs/experiment/basd_cifar100.yaml
@@ -4,6 +4,9 @@ run:
 data:
   dataset: uoft-cs/cifar100
   batch_size: 128
+  channel_stats:
+    mean: [0.5071, 0.4867, 0.4408]
+    std: [0.2675, 0.2565, 0.2761]
 
 model:
   student_preset: deit_tiny
