--- a/configs/defaults.yaml
+++ b/configs/defaults.yaml
@@ -8,6 +8,11 @@ data:
   eval_datasets: []
   batch_size: 256
   num_workers: 16
+  random_erasing_prob: 0.25
+  eval_resize_padding: 32
+  channel_stats:
+    mean: [0.485, 0.456, 0.406]
+    std: [0.229, 0.224, 0.225]
 
 model:
   student_preset: ""
